--- a/xiaohouzi/package.json
+++ b/xiaohouzi/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.10",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "yarn": "^1.12.3"
   },
   "scripts": {
     "start": "react-scripts start",
