--- a/mysite/docker-compose.yml
+++ b/mysite/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
     - "8000:8000"
     volumes:
-    - ./mysite:/mysite
+    - ./:/mysite
     - /tmp/logs:/tmp
     command: bash start.sh  # 执行命令，有多种格式
     links:
@@ -29,7 +29,7 @@ services:
     restart: always
 
 nginx:
-    build: ./nginx
+    build: ./config
     ports:
     - "80:80"
     volumes:
