--- a/mysite/sentinel/sentinel.conf
+++ b/mysite/sentinel/sentinel.conf
@@ -67,7 +67,7 @@ dir /tmp
 # Note: master name should not include special characters or spaces.
 # The valid charset is A-z 0-9 and the three characters ".-_".
 # sentinel monitor master redis-master 6379 2
-sentinel monitor master redis-master 6379
+sentinel monitor master redis-master 6379 1
 
 # sentinel auth-pass <master-name> <password>
 #
