--- a/mysite/docker-compose.yml
+++ b/mysite/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   web:
     build: ./main
     ports:
-      - "8000:8000"
+      - "8000:8080"
     volumes:
       - ./:/mysite
       - /tmp/logs:/tmp
@@ -27,6 +27,7 @@ services:
       - sentinel
       - redis-master:redis
     depends_on:
+      - ui
       - db
       - nginx
       - sentinel
@@ -34,23 +35,25 @@ services:
     restart: always
 
   nginx:
-    build: ./config
+    image: nginx:1.17-alpine
     ports:
       - "80:80"
     volumes:
       - ./static:/usr/share/nginx/html/static:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     restart: always
+    links:
+      - ui
 
-
-#  ui:
-#    image: node:10
-#    restart: always
-#    working_dir: "/opt/app"
-#    ports:
-#      - "18001:8000"
-#    volumes:
-#      - ./frontend-ui:/opt/app:rw
-#    command: sh -c "test -d node_modules && npm run start || (npm install && npm run start)"
+  ui:
+   image: node:10
+   restart: always
+   working_dir: "/opt/app"
+   ports:
+     - "18001:8000"
+   volumes:
+     - ./frontend-ui:/opt/app:rw
+   command: sh -c "test -d node_modules && npm run start || (npm install && npm run start)"
 
   redis-master:
     image: redis:latest
