--- a/mysite/nginx.conf
+++ b/mysite/nginx.conf
@@ -7,14 +7,26 @@ server {
     }
 
     resolver 127.0.0.11;
-    set $ui ui:8000;
     set $web web:8080;
+    set $ui ui:8000;
 
-    location / {
+    location ~* ^/(home) {
         proxy_pass http://$ui;
     }
 
     location ~* ^/(api\/v1|admin) {
         proxy_pass http://$web;
+    } 
+}
+
+server {
+    listen      80;
+    server_name admin.thiswjk.xyz;
+
+    resolver 127.0.0.11;
+    set $ui ui:8000;
+
+    location / {
+        proxy_pass http://$ui;
     }
 }
