update docker stack

--- a/mysite/nginx.conf
+++ b/mysite/nginx.conf
@@ -7,26 +7,37 @@ server {
     }
 
     resolver 127.0.0.11;
-    set $web web:8080;
     set $ui ui:8000;
 
-    location ~* ^/(home) {
+    location / {
         proxy_pass http://$ui;
     }
-
-    location ~* ^/(api\/v1|admin) {
-        proxy_pass http://$web;
-    } 
 }
 
 server {
     listen      80;
     server_name admin.thiswjk.xyz;
 
+    location /static {
+        alias /usr/share/nginx/html/static;
+    }
+
     resolver 127.0.0.11;
-    set $ui ui:8000;
+    set $web web:8080;
 
     location / {
-        proxy_pass http://$ui;
+        proxy_pass http://$web;
+    }
+}
+
+server {
+    listen      80;
+    server_name api.thiswjk.xyz;
+
+    resolver 127.0.0.11;
+    set $web web:8080;
+
+    location / {
+        proxy_pass http://$web/api/v1;
     }
 }
