--- a/mysite/frontend-ui/package.json
+++ b/mysite/frontend-ui/package.json
@@ -48,11 +48,12 @@
     "@antv/data-set": "^0.10.2",
     "@types/lodash.debounce": "^4.0.6",
     "@types/react-router": "^5.0.2",
-    "antd": "^3.19.1",
+    "antd": "^3.19.8",
     "bizcharts": "^3.5.4",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
+    "enquire-js": "^0.2.1",
     "gg-editor": "^2.0.4",
     "hash.js": "^1.1.7",
     "lodash": "^4.17.11",
@@ -67,6 +68,10 @@
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "rc-animate": "^2.8.3",
+    "rc-banner-anim": "^2.2.8",
+    "rc-queue-anim": "^1.6.12",
+    "rc-scroll-anim": "^2.5.8",
+    "rc-tween-one": "^2.4.1",
     "react": "^16.8.6",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
