--- a/ui.yml
+++ b/ui.yml
@@ -3,20 +3,20 @@ version: "3.5"
 services:
   nginx:
     image: nginx:1.17-alpine
-    ports:
-      - "80:80"
     volumes:
-      - ./static:/usr/share/nginx/html/static:ro
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - ui_net
       - nginx-net
+    environment:
+      VIRTUAL_HOST: thiswjk.xyz
+      VIRTUAL_PORT: 8000
+      LETSENCRYPT_HOST: thiswjk.xyz
+      LETSENCRYPT_EMAIL: kangmang92@gmail.com
 
   ui:
     image: node:10
     working_dir: "/opt/app"
-    ports:
-      - "18001:8000"
     volumes:
       - ./:/opt/app:rw
     command: sh -c "test -d node_modules && npm start || (npm install && npm start)"
