--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 server {
-    listen 8000;
+    listen 8080;
     # gzip config
     gzip on;
     gzip_min_length 1k;
     gzip_comp_level 9;
-    gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
+    gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
     gzip_vary on;
     gzip_disable "MSIE [1-6]\.";
 
@@ -12,5 +12,10 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
+    }
+    location /api {
+        proxy_pass https://ant-design-pro.netlify.com;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Real-IP         $remote_addr;
     }
 }
