--- a/ui.yml
+++ b/ui.yml
@@ -1,27 +1,34 @@
 version: "3.5"
 
 services:
-  nginx:
-    image: nginx:1.17-alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    networks:
-      - ui_net
-      - nginx-net
-    environment:
-      VIRTUAL_HOST: thiswjk.xyz
-      VIRTUAL_PORT: 8000
-      LETSENCRYPT_HOST: thiswjk.xyz
-      LETSENCRYPT_EMAIL: kangmang92@gmail.com
+#   nginx:
+#     image: nginx:1.17-alpine
+#     volumes:
+#       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+#     networks:
+#       - ui_net
+#       - nginx-net
+#     environment:
+#       VIRTUAL_HOST: thiswjk.xyz
+#       VIRTUAL_PORT: 8000
+#       LETSENCRYPT_HOST: thiswjk.xyz
+#       LETSENCRYPT_EMAIL: kangmang92@gmail.com
 
   ui:
-    image: node:10
-    working_dir: "/opt/app"
+    image: registry.thiswjk.xyz/will/ui:latest
     volumes:
-      - ./:/opt/app:rw
-    command: sh -c "test -d node_modules && npm start || (npm install && npm start)"
+      - dist:/usr/src/app/dist
+    # command: sh -c "test -d node_modules && npm start || (npm install && npm start)"
+    environment:
+      VIRTUAL_HOST: thiswjk.xyz
+      VIRTUAL_PORT: 8080
+      LETSENCRYPT_HOST: thiswjk.xyz
+      LETSENCRYPT_EMAIL: kangmang92@gmail.com
     networks:
-      - ui_net
+      - nginx-net
+
+volumes:
+  dist:
 
 networks:
   ui_net:
