--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: /app
+    working_directory: /ui
     docker:
       - image: docker:17.05.0-ce-git
     steps:
@@ -11,30 +11,30 @@ jobs:
           keys:
             - v1-{{ .Branch }}
           paths:
-            - /caches/app.tar
+            - /caches/ui.tar
       - run:
           name: Load Docker image layer cache
           command: |
             set +o pipefail
-            docker load -i /caches/app.tar | true
+            docker load -i /caches/ui.tar | true
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t app .
+            docker build --cache-from=app -t ui .
       - run:
           name: Save Docker image layer cache
           command: |
             mkdir -p /caches
-            docker save -o /caches/app.tar app
+            docker save -o /caches/ui.tar ui
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
-            - /caches/app.tar
+            - /caches/ui.tar
       - run:
           name: Push to registry
           command: |
             docker login registry.thiswjk.xyz -u ${user} -p ${passd}
-            docker tag app registry.thiswjk.xyz/will/ui
+            docker tag ui registry.thiswjk.xyz/will/ui
             docker push registry.thiswjk.xyz/will/ui
   deploy:
     machine:
