circleci 配置环境变量

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: update service
           command: |
-            curl -X POST ${web_webhooks}
+            curl -X POST ${ui_webhooks}
 workflows:
   version: 2
   build-and-deploy:
